# squiggle-win

./: .gitignore  CMakeLists.txt  TODO  config.example.json  index.html  main.js  package-lock.json  package.json  preload.js
.github/workflows/: build.yml
source/: main.js  preload.js
source/renderer/: index.html  index.js  topbar.js  utilities.js
source/renderer/style/: main.css  top-bar.css  topbar.css
source/tabs/aimode/: index.js
source/tabs/golens/: index.js
source/tabs/settings/: index.js  prompt.js  style.css
source/tabs/welcome/: index.html  index.js
src/: Window.cpp  Window.h  main.cpp
